# HabitTracker

./: CMakeLists.txt  VariablesNames_testing.txt  balancegraph.cpp  balancegraph.h  habbit_tracker.cpp  habbit_tracker.h  habbit_tracker.ui  habitClass.cpp  habitClass.h  images.qrc  main.cpp
themes_examples/: Bows_and_Shit.txt  Vanilla_Leaves.txt  darker.txt  default.txt  halloween.txt  selectedTheme.txt
